--- a/index.html
+++ b/index.html
@@ -99,10 +99,15 @@
             </div>
             
             <div class="image-gallery">
-                <img src="TwistCapsule-1.png" alt="Imagen del proyecto Twist Capsule 1">
-                <img src="TwistCapsule-2.png" alt="Imagen del proyecto Twist Capsule 2">
-                <img src="TwistCapsule-3.png" alt="Imagen del proyecto Twist Capsule 3">
-        
+                <a href="https://d2w9rnfcy7mm78.cloudfront.net/40812628/original_172a35df3b3170e2a010826f4a9fe9b0.png?1762184347?bc=0" target="_blank">
+                <img src="TwistCapsule-1.png" alt="Imagen del proyecto Twist Capsule 1"  height="640"  width="480">
+                </a>
+                <a href="https://d2w9rnfcy7mm78.cloudfront.net/40812625/original_85f18373dedff59799d870842540b485.png?1762184345?bc=0" target="_blank">
+                <img src="TwistCapsule-2.png" alt="Imagen del proyecto Twist Capsule 2"  height="640"  width="640">
+                </a>
+                <a href="https://d2w9rnfcy7mm78.cloudfront.net/40812631/original_19f7e92dfe38cfa2b98cf28f4ba0f9c4.png?1762184353?bc=0" target="_blank">
+                <img src="TwistCapsule-3.png" alt="Imagen del proyecto Twist Capsule 3"  height="640"  width="480">
+                </a>
             </div>
         </section>
 
