--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         
         /* Contacto en una línea */
         .contact-info p {
+             color: #0000ff;
              font-size: 1em;
              margin: 0;
              white-space: nowrap; 
