--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
 
             <div class="contact-info">
-                <p>castillofereroangela (at) gmail (dot) com // +34 686 646 684</p>
+                <p>castillofereroangela (at) gmail (dot) com * +34 686 646 684</p>
             </div>
         </header>
         
