--- a/indexxx.html
+++ b/indexxx.html
@@ -161,7 +161,7 @@
             </div>
 
             <div class="contact-info">
-                <p>castillofereroangela(at)gmail(dot)com +34 686 646 684</p>
+                <p>castillofereroangela(at)gmail(dot)com     </p>
             </div>
         </header>
         
@@ -224,9 +224,7 @@
         </div>
         </main>
 
-    <footer class="footer container">
-        <p class="last-updated" style="text-align: right;">last updated: 03/nov/25</p>
-    </footer>
+   
     
     <script>
         const draggableElements = document.querySelectorAll('.window');
