--- a/indexxx.html
+++ b/indexxx.html
@@ -273,7 +273,7 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-4"
-                        src="https://via.placeholder.com/400x400" 
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41008340/original_f09bba8bf0d0c4a387ebd2a1037c6a09.png?1762812024?bc=0" 
                         alt="Placeholder 4">
                 </div>
                 <div class="window-footer">
@@ -287,7 +287,7 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-5"
-                        src="https://via.placeholder.com/600x400" 
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41008348/original_6bb10a690c5a8dc9bf8e60f533634292.png?1762812035?bc=0" 
                         alt="Placeholder 5">
                 </div>
                 <div class="window-footer">
