--- a/indexxx.html
+++ b/indexxx.html
@@ -68,10 +68,6 @@
             text-align: left; 
         }
 
-        /*
-        * REGLA ELIMINADA: La regla .main-info br { ... margin-bottom: 5px; } ha sido eliminada.
-        * Ahora el <br> se comporta como un salto de línea normal sin espacio extra.
-        */
 
         /* Contenedor de contacto y botón (derecha) */
         .contact-info {
@@ -159,7 +155,7 @@
             min-height: 100px;
 
             background-color: #f0f0f0;
-            border: 1px solid #333;
+            border: 0px solid #333;
             box-shadow: 3px 3px 0px #888;
             z-index: 100;
 
@@ -187,10 +183,10 @@
 
         .window-footer {
             cursor: move;
-            background-color: #fff;
-            color: #000;
-            padding: 2px 5px;
-            border-top: 1px solid #333;
+            background-color: #f0f0f0;
+            color: #f0f0f0;
+            padding: 1px 2px;
+            border-top: 0px solid #333;
             user-select: none;
             flex-shrink: 0;
             text-align: left;
@@ -234,7 +230,6 @@
         <header class="header">
             <div class="main-info">
                 <a href="https://www.instagram.com/angelaquehaces" target="_blank">Ángela Castillo Ferrero</a>
-                <br>
                 Jewelry / Fashion Accessories designer
                 <br>
                 Based in Barcelona
