--- a/indexxx.html
+++ b/indexxx.html
@@ -87,7 +87,7 @@
         
         /* === ESTILOS DEL BOTÓN (PORTFOLIO REQUEST) === */
         .button {
-            align-items: center;
+            align-items: justify;
             -webkit-appearance: none;
             appearance: none;
             border: 0;
@@ -97,7 +97,7 @@
             display: inline-flex;
             font: inherit;
             margin-top: 5px; /* Margen para separarlo del email */
-            padding: 5px 10px;
+            padding: 2px 2px;
             text-decoration: none;
             white-space: nowrap;
             transition: background-color 0.2s;
@@ -107,7 +107,7 @@
         .button-primary {
             background-color: #8B4513;
             color: white;
-            font-weight: bold;
+            font-weight: regular;
         }
 
         .button-primary:hover {
@@ -156,7 +156,7 @@
 
             background-color: #f0f0f0;
             border: 0px solid #333;
-            box-shadow: 3px 0px 0px #888;
+            box-shadow: 0px 0px 0px #888;
             z-index: 100;
 
             resize: none;
@@ -210,9 +210,9 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            width: 5px;
-            height: 5px;
-            background: #333;
+            width: 10px;
+            height: 10px;
+            background: #8B4513;
             cursor: nwse-resize;
             z-index: 10;
         }
@@ -238,7 +238,7 @@
             <div class="contact-info">
                 <p>castillofereroangela(at)gmail(dot)com</p>
                 <button class="button button-primary" onclick="alert(añadir correo?)">
-                    Full Portfolio available upon request
+                    REQUEST FULL PORTFOLIO
                 </button>
             </div>
         </header>
