--- a/indexxx.html
+++ b/indexxx.html
@@ -268,7 +268,7 @@ a {
             </div>
 
             <div class="contact-info">
-                <p>castillofereroangela@gmail.com</p>
+                castillofereroangela@gmail.com
                  <div class="request-form" id="requestForm">
                     <input type="email" 
                            id="emailInput" 
