--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </pre>
             </div>
     
-       <div id="watermark" style="padding-top: 100px; text-align: right; font-size: 10px"> 
+       <div class="watermark"> 
                 <i style="color:gray">Website designed by <a href="https://martamatroska.github.io/" style="color: gray" target="_blank">@marta.mkv</a></i>
              </div>
 
