--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
 
        <div class="about-container">
             <p class="about-text" id="about-me-text">
-                Ángela is a designer focused on creating narratives through material culture.
-                Her work explores the intersection between digital craftsmanship and traditional
-                techniques, creating fashion accessories with a unique approach.
+                A hybrid professional, an engineer applying design principles ⇄ designer implementing engineering methodology
+                (super quiet too, just like a Prius). Fully mastered <span class="highlight-blue">end-to-end product 
+                development</span>, from initial conceptualization to final realization.
                 <br>
-                Throughout her career, she has worked on <span class="highlight-blue">innovative parametric jewelry projects</span>
-                and has participated in <span class="highlight-blue">international design exhibitions</span>.
-                Her fascination with materials and their transformation drives her to constantly
-                seek new forms of expression.
+                My expertise is rooted in jewelry design, working with <span class="highlight-blue">noble and precious materials</span>  
+                like gems, silver, 18K gold, semi-precious gemstones, lab-grown diamonds…  My approach is strategic, driven by cost 
+                orientation, commercial vision, global brand understanding, and a relentless eye for detail.
+                <br>
+                Beyond designing for remarkable brands,  I also partner with emerging labels, <span class="highlight-blue">offering creative guidance.</span>
+                My work is diverse; from fashion brands to collaborating with artistic talents or developing custom pieces.
             </p>
 
             <pre style="font-family: monospace; font-size: 14px; line-height: 1;">
