--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-3"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/40812631/original_19f7e92dfe38cfa2b98cf28f4ba0f9c4.png"
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41314955/original_813217685eb30182270083f442215091.png?1763907286?bc=0"
                         alt="Destacado 3: Twist Capsule">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">screenshot-2025-11-10.pdf.png</span>
+                    <span class="filename-text">Lazo_earring.png *RIGIDO*</span>
                     <span class="dimensions-text" id="dims-3"></span>
                 </div>
                 <div class="resize-handle"></div>
