--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
        <div class="about-container">
             <p class="about-text" id="about-me-text">
                 A hybrid professional, an engineer applying design principles ⇄ designer implementing engineering methodology
-                (super quiet too, just like a Prius). Fully mastered <span class="highlight-blue">end-to-end product 
+                (super quiet too, I'm like a Prius). Fully mastered <span class="highlight-blue">end-to-end product 
                 development</span>, from initial conceptualization to final realization.
                 <br><br>
                 My expertise is rooted in jewelry design, working with <span class="highlight-blue">noble and precious materials</span>  
