--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
        <div class="about-container">
             <p class="about-text" id="about-me-text">
-                A hybrid professional, an engineer applying design principles ⇄ designer implementing engineering methodology
+                <i style="color:black">A hybrid professional, an engineer applying design principles ⇄ designer implementing engineering methodology
                 (super quiet too, I'm like a Prius). Fully mastered <span class="highlight-blue">end-to-end product 
                 development</span>, from initial conceptualization to final realization.
                 <br><br>
@@ -53,7 +53,7 @@
                 orientation, commercial vision, global brand understanding, and a relentless eye for detail.
                 <br><br>
                 Beyond designing for remarkable brands,  I also partner with emerging labels, <span class="highlight-blue">offering creative guidance.</span>
-                My work is diverse; from fashion brands to collaborating with artistic talents or developing custom pieces.
+                My work is diverse; from fashion brands to collaborating with artistic talents or developing custom pieces.</i>
             </p>
 
             <pre style="font-family: monospace; font-size: 10px; line-height: 1; text-align: center;">⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
