--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-2"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/40812625/original_85f18373dedff59799d870842540b485.png?1762184345?bc=0"
-                        alt="Destacado 2: Twist Capsule">
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41341670/original_3eee4e2ddb63d9dba927dec98897c655.jpg?1763995995?bc=0"
+                        alt="Cisne_earring.jpg *RIGIDO*">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">SAND-II.png</span>
+                    <span class="filename-text">Cisne_earring.jpg *RIGIDO*</span>
                     <span class="dimensions-text" id="dims-2"></span>
                 </div>
                 <div class="resize-handle"></div>
@@ -119,11 +119,11 @@
                 <div class="window-header"></div>
                 <div class="window-body">
                     <img id="img-3"
-                        src="https://d2w9rnfcy7mm78.cloudfront.net/41314955/original_813217685eb30182270083f442215091.png?1763907286?bc=0"
-                        alt="Destacado 3: Twist Capsule">
+                        src="https://d2w9rnfcy7mm78.cloudfront.net/41341668/original_b10d070855e894b4247caa58c295fff8.jpg?1763995995?bc=0"
+                        alt="Lazo_earring.jpg *RIGIDO*">
                 </div>
                 <div class="window-footer">
-                    <span class="filename-text">Lazo_earring.png *RIGIDO*</span>
+                    <span class="filename-text">Lazo_earring.jpg *RIGIDO*</span>
                     <span class="dimensions-text" id="dims-3"></span>
                 </div>
                 <div class="resize-handle"></div>
